--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "axios": "^1.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.21.1",
-    "axios": "^1.6.5"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
