--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -61,8 +59,49 @@ services:
       timeout: 10s
       retries: 3
 
+  # Backend Test Service
+  backend-test:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      target: build
+    container_name: projecthub-backend-test
+    volumes:
+      - ./backend:/app
+      - maven-cache:/root/.m2
+    command: mvn test
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/projecthub
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    networks:
+      - projecthub-network
+    profiles:
+      - test
+
+  # Frontend Test Service
+  frontend-test:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      target: build
+    container_name: projecthub-frontend-test
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    command: npm run test:ci
+    networks:
+      - projecthub-network
+    profiles:
+      - test
+
 volumes:
   postgres_data:
+    driver: local
+  maven-cache:
     driver: local
 
 networks:
